# ojs-scrape

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  PROMPT.md  README.md  findings.md  mkdocs.yml  progress.md  pyproject.toml  task_plan.md
.github/workflows/: docs.yml
docs/: api.md  citation.md  cli.md  compatibility.md  credits-transparency.md  design-rationale.md  development.md  index.md  installation.md  pdfs.md  roadmap.md  usage.md
ojs_scrape/: __init__.py  cli.py  exporters.py  filters.py  models.py  oaipmh.py  pdf.py  toc.py
src/ojs_scrape/: __init__.py  cli.py  exporters.py  filters.py  models.py  oaipmh.py  pdf.py  toc.py
tests/: conftest.py  test_exporters_cli.py  test_integration_afroasia.py  test_models_filters.py  test_oaipmh.py  test_oaipmh_parser.py  test_pdf.py  test_toc.py
