[project]
name = "ojs-scrape"
version = "0.1.0"
description = "Ferramenta CLI para coleta de dados estruturados de periódicos OJS via OAI-PMH"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Eric Brasil Nepomuceno", email = "ericbrasil@unilab.edu.br" },
]
keywords = [
    "academic-journals",
    "bibliographic-data",
    "harvester",
    "oai-pmh",
    "ojs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://ericbrasil.com.br/ojs-scrape"
Documentation = "https://ericbrasil.com.br/ojs-scrape"
Repository = "https://github.com/ericbrasiln/ojs-scrape"
Issues = "https://github.com/ericbrasiln/ojs-scrape/issues"

[project.scripts]
ojs-scrape = "ojs_scrape.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ojs_scrape"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/mkdocs.yml",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que acessam endpoints reais na internet",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line-length já é controlado pelo formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
packages = ["ojs_scrape"]
strict = true
warn_unreachable = true
pretty = true
